[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Field.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=4]
[ext_resource path="res://Scripts/World.gd" type="Script" id=5]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PC.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.33, 1 )
colors = PoolColorArray( 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = SubResource( 3 )
region = Rect2( 0, 0, 1, 1 )

[sub_resource type="ProceduralSky" id=5]
ground_bottom_color = Color( 0.4, 0.329412, 0.231373, 1 )
ground_horizon_color = Color( 0.239216, 0.537255, 0.223529, 1 )
ground_curve = 0.049246
sun_latitude = 150.0

[sub_resource type="Environment" id=6]
background_mode = 2
background_sky = SubResource( 5 )

[sub_resource type="GDScript" id=7]
script/source = "extends Label

func _ready():
	pass

func _process(delta):
	set_text(str(Engine.get_frames_per_second()))
"

[node name="World" type="Spatial"]
script = ExtResource( 5 )

[node name="Field" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30.2308, 2.94311, -1.04783 )
mass = 0.06

[node name="PC" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.14044e-07, 0, -0.7, 0, 0.7, 0, 0.7, 0, -1.14044e-07, 32.5894, 0, 0 )
script = ExtResource( 7 )

[node name="SwingPower" type="TextureProgress" parent="PC"]
margin_left = 14.8196
margin_top = 551.01
margin_right = 270.82
margin_bottom = 582.597
step = 0.1
texture_progress = SubResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="PC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -25.0
margin_right = 286.0
margin_bottom = 31.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC_AimTarget" type="Position3D" parent="."]
transform = Transform( 1, 0, 9.9476e-13, 0, 1, 0, -9.9476e-13, 0, 1, 0, 0.1, 0 )

[node name="Sprite3D" type="Sprite3D" parent="PC_AimTarget"]
modulate = Color( 1, 0, 0, 1 )
opacity = 0.5
pixel_size = 2.0
axis = 1
billboard = 2
shaded = true
double_sided = false
texture = SubResource( 4 )

[node name="NPC" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.14044e-07, 0, 0.7, 0, 0.7, 0, -0.7, 0, -1.14044e-07, -32.0784, 0, 0 )
script = ExtResource( 6 )

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="Environment"]
transform = Transform( 0.965926, 0.0669873, -0.25, 0, 0.965926, 0.258819, 0.258819, -0.25, 0.933013, -7, 64, 93 )
__meta__ = {
"_edit_lock_": true
}

[node name="Score" type="Label" parent="."]
margin_left = 5.0
margin_top = 6.0
margin_right = 110.0
margin_bottom = 42.0
text = "PC -- 0 | 0 | 0
NPC -- 0 | 0 | 0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="."]
margin_left = 992.0
margin_top = 6.0
margin_right = 1017.0
margin_bottom = 25.0
script = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, -0.422618, 0.906308, 0, 0.906308, 0.422618, -1, 6.88532e-08, -1.47656e-07, 57.295, 18.568, 0 )
keep_aspect = 0
current = true
near = 0.01
far = 500.0

[node name="CardanExt" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )
script = ExtResource( 8 )

[node name="CardanInt" type="Spatial" parent="CardanExt"]

[node name="Camera" type="Camera" parent="CardanExt/CardanInt"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
keep_aspect = 0
fov = 120.0
size = 70.0
near = 0.01
far = 500.0

[node name="InfoPunct" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 448.0
margin_top = 9.025
margin_right = 488.0
margin_bottom = 22.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Ball" to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
